[package]
name = "day_6"
version = "0.1.0"
authors = ["Colin Bradley <colin@colinbradley.co.uk>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]

[dev-dependencies]
criterion = "0.3.2"

[[bench]]
name = "orbits"
harness = false